--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+1.46_01 - 2016-08-18
+  - List::Util::XS has been split out from Scalar-List-Utils
+  - fix uniq on perl 5.8.0
+
 1.45 -- 2016/03/25 16:09:40
 	[CHANGES]
 	 * Renamed existing uniq() to uniqstr()
